# evo-nn

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: arena.rs  lib.rs  main.rs
src/agent/: body.rs  brain.rs  connection.rs  genome.rs  index.rs  mod.rs  neuron.rs  state.rs
src/world/: controller.rs  mod.rs
