[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
authors = ["Shirotha"]
version = "0.1.0"
edition = "2024"


[package]
name = "evo-nn"
authors.workspace = true
description = "evolutionary neural network"
repository = "https://github.com/Shirotha/evo-nn"
version.workspace = true
edition.workspace = true

[dependencies]
thin-slice = "0.1.1"
thin-vec = { version = "0.2.13", features = ["serde"] }
typed_floats = "1.0.1"
